--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -53,7 +53,7 @@
       <%= f.label :password, :class => 'control-label' %>
       <div class="controls">
         <%= f.password_field :password, :required => :required %>
-        <span class="help-inline">(required)</span>
+        <span class="help-inline">*</span>
         <span class="help-block"><small>Password must be at least eight characters</small></span>
       </div>
     </div>
@@ -62,7 +62,7 @@
       <%= f.label :password_confirmation, :class => 'control-label' %>
       <div class="controls">
         <%= f.password_field :password_confirmation, :required => :required %>
-        <span class="help-inline">(required)</span>
+        <span class="help-inline">*</span>
       </div>
     </div>
   </fieldset>
@@ -147,4 +147,3 @@
   </div>
 
 <% end %>
-
