--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -155,7 +155,7 @@
         <%= f.label :current_password, :class => 'control-label' %>
         <div class="controls">
           <%= f.password_field :current_password, :required => 'required' %>
-          <span class="help-inline">(required)</span>
+          <span class="help-inline">*</span>
         </div>
       </div>
 
