--- a/app/views/devise/registrations/_course_details.html.erb
+++ b/app/views/devise/registrations/_course_details.html.erb
@@ -5,7 +5,7 @@
     <%= f.label :university_qualification, :class => 'control-label' %>
     <div class="controls">
       <%= f.select(:university_qualification, Qualification.names + ["Other (please specify)"], { prompt: "Please select" }, :required => "required") %>
-      <span class="help-inline">(required)</span>
+      <span class="help-inline">*</span>
     </div>
   </div>
 
@@ -13,7 +13,7 @@
     <%= f.label :university_qualification_other, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :university_qualification_other %>
-      <span class="help-inline">(required)</span>
+      <span class="help-inline">*</span>
     </div>
   </div>
 
@@ -21,7 +21,7 @@
     <%= f.label :university_course_name, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :university_course_name %>
-      <span class="help-inline">(required)</span>
+      <span class="help-inline">*</span>
     </div>
   </div>
 
@@ -30,7 +30,7 @@
     <div class="controls">
       <%= f.select(:university_course_start_date_month, date_months, {}, :required => "required", :class => "month-datepicker") %>
       <%= f.select(:university_course_start_date_year, course_date_years, { }, :required => "required", :class => "year-datepicker") %>
-      <span class="help-inline">(required)</span>
+      <span class="help-inline">*</span>
     </div>
   </div>
 
@@ -39,7 +39,7 @@
     <div class="controls">
       <%= f.select(:university_course_end_date_month, date_months, {}, :required => "required", :class => "month-datepicker") %>
       <%= f.select(:university_course_end_date_year, course_date_years, { }, :required => "required", :class => "year-datepicker") %>
-      <span class="help-inline">(required)</span>
+      <span class="help-inline">*</span>
     </div>
   </div>
 </fieldset>
