--- a/app/views/devise/registrations/_university_details.html.erb
+++ b/app/views/devise/registrations/_university_details.html.erb
@@ -5,7 +5,7 @@
     <%= f.label :university_name, :class => 'control-label' %>
     <div class="controls">
       <%= f.select(:university_name, University.names + ["Other (please specify)"], { prompt: "Please select" }, :required => "required") %>
-      <span class="help-inline">(required)</span>
+      <span class="help-inline">*</span>
     </div>
   </div>
 
@@ -13,7 +13,7 @@
     <%= f.label :university_name_other, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :university_name_other %>
-      <span class="help-inline">(required)</span>
+      <span class="help-inline">*</span>
     </div>
   </div>
 
@@ -21,7 +21,7 @@
     <%= f.label :university_email, :class => 'control-label'%>
     <div class="controls">
       <%= f.email_field :university_email, :required => 'required' %>
-      <span class="help-inline">(required)</span>
+      <span class="help-inline">*</span>
       <span class="help-block"><small>Your university/college issued email address</small></span>
     </div>
   </div>
