Assume newsletter is a yes

--- a/app/views/devise/registrations/_affiliated_node.html.erb
+++ b/app/views/devise/registrations/_affiliated_node.html.erb
@@ -12,5 +12,12 @@
       <%= f.select :origin, Member::ORIGINS, :selected => origin_value, :include_blank => true %>
     </div>
   </div>
-</fieldset>
 
+  <div class="control-group newsletter third-parties">
+    <div class="controls">
+      <label class="checkbox">
+        <%= f.check_box :cached_share_with_third_parties %> <%= t(:share_with_third_parties) %>
+      </label>
+    </div>
+  </div>
+</fieldset>
