--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -141,7 +141,9 @@
 
   <fieldset>
 
-    <legend>How much do you want to pay? (inclusive of VAT, per annum)</legend>
+    <legend>Subscription amount</legend>
+
+    <p class="lead">We're now offering you the chance to select how much you wish to pay for membership - from £1 to £100. It's up to you. What you pay is inclusive of VAT.</p>
 
     <div class="control-group">
       <%= f.label :subscription_amount, :class => 'control-label' %>
