Add link to org signup

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,12 @@
     This won't take longer than a couple of minutes!
   </p>
 
+  <% if individual? %>
+    <p class="lead">
+      Want to sign up as an organisation instead? <a href="http://theodi.org/odi-supporter">Join here</a>
+    </p>
+  <% end %>
+
   <%= hidden_field_tag(:free, params[:free]) if params[:free].present? %>
   <%= f.hidden_field :coupon, value: params[:coupon] if params[:coupon].present? %>
   <%= f.hidden_field :coupon, value: params[:member][:coupon] if params[:member] && params[:member][:coupon].present? %>
