--- a/app/views/devise/registrations/_affiliated_node.html.erb
+++ b/app/views/devise/registrations/_affiliated_node.html.erb
@@ -7,7 +7,7 @@
   </legend>
 
   <div class="control-group">
-    <%= f.label :origin, "Yes, the Node is", :class => 'control-label' %>
+    <%= f.label :origin, "Yes, the node is", :class => 'control-label' %>
     <div class="controls">
       <%= f.select :origin, Member::ORIGINS, :selected => origin_value, :include_blank => true %>
     </div>
