--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-  <legend>We just need a few of your details</legend>
+  <legend></legend>
 
   <div class="control-group">
     <%= f.label :contact_name, :class => 'control-label' %>
