Change 'Subscription amount' to 'Annual subscription amount'

--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -141,7 +141,7 @@
 
   <fieldset>
 
-    <legend>Subscription amount</legend>
+    <legend>Annual subscription amount</legend>
 
     <p class="lead">We're now offering you the chance to select how much you wish to pay for membership - from £1 to £100. It's up to you. What you pay is inclusive of VAT.</p>
 
