Adjust free signup text to reflect no more need for cards

--- a/app/views/members/payment.html.erb
+++ b/app/views/members/payment.html.erb
@@ -11,14 +11,12 @@
 <% case @discount_type %>
 <% when :free %>
 <p>
-    As part of this sign-up process we need to take your credit or debit card
-    details. Don’t worry, you’re still getting the first twelve months of
-    membership for free.
+    Congratulations! You’re receiving 12 months of free ODI membership. This 
+    will be set up on the next page.
 </p>
 <p>
-    After twelve months you’ll only be charged if you decide
-    to renew. We’ll give you plenty of notice before taking any payment from the
-    card and you are under absolutely no obligation to renew.
+    You’ll only have to enter your card details when you decide
+    to renew after twelve months.
 </p>
 <% when :discount %>
 <p>
