--- a/app/views/members/payment.html.erb
+++ b/app/views/members/payment.html.erb
@@ -11,8 +11,8 @@
 <% case @discount_type %>
 <% when :free %>
 <p>
-    Congratulations! You’re receiving 12 months of free ODI membership. This 
-    will be set up on the next page.
+    Congratulations! You’re receiving 12 months of free ODI membership. You can
+    complete the process on the next page.
 </p>
 <p>
     You’ll only have to enter your card details when you decide
