--- a/app/views/organizations/_summary.erb
+++ b/app/views/organizations/_summary.erb
@@ -8,8 +8,8 @@
   <div class='organization-content'>
     <h2 property="name"><%= link_to organization.name, organization.member %>  <span class="label <%= organization.member.product_name %>"><%= organization.membership_description %></span></h2>
 
-    <% if organization.cached_tagline.present? %>
-      <p><strong><%= organization.cached_tagline %></strong></p>
+    <% if organization.tagline.present? %>
+      <p><strong><%= organization.tagline %></strong></p>
     <% end %>
 
     <% if organization.url.present? %>
